修复多次点击评论按钮出现多个评论框的 BUG

--- a/like/templates/api/reply.html
+++ b/like/templates/api/reply.html
@@ -1,4 +1,4 @@
-<div class="ui action small input">
+<div class="ui action small input reply-input">
   <input type="text" placeholder="回复 {{ comment.creator.username }}">
   <button class="ui button to-bind-reply" data-commentid="{{ comment.id }}">发表</button>
 </div>
