--- a/like/templates/front/post.html
+++ b/like/templates/front/post.html
@@ -39,6 +39,10 @@
       </span>
     </div>
   </div>
+  <div class="ui action input fluid">
+  <input type="text" placeholder="写下你的评论">
+  <button class="ui button" id="comment-post">发表评论</button>
+</div>
   <div class="ui card" id="post-comments">
     <div class="dividing content">
       <div class="header">热门评论</div>
