--- a/like/templates/_macros.html
+++ b/like/templates/_macros.html
@@ -32,12 +32,19 @@
         {% endif %}
       <span class="count">{{ post.collected_users|length }}</span>
       </span>
+    {# 评论 #}
       <span class="left floated comment-post" data-action="commentPost" data-id="{{ post.id }}">
+        <a href="{{ url_for('front.post', post_id=post.id) }}">
         <i class="comment icon"></i>
         <span class="count">{{ post.comments|length }}条评论</span>
+        </a>
       </span>
+    {# 作者 #}
       <div class="right floated author">
-        <a href="{{ url_for('user.index', user_id=post.creator_id) }}">{{ post.creator.username }}</a>
+        <a href="{{ url_for('user.index', user_id=post.creator_id) }}" class="avatar">
+          <img src="{{ post.creator.avatar(50) }}">
+          {{ post.creator.username }}
+        </a>
       </div>
     </div>
     {% if post.comments|length > 0 %}
@@ -55,8 +62,13 @@
 
 {% macro render_comment_card(comment) %}
   <div class="comment" data-id="{{ comment.id }}">
+    <a href="{{ url_for('user.index', user_id=comment.creator.id) }}" class="avatar">
+      <img src="{{ comment.creator.avatar(50) }}">
+    </a>
     <div class="content">
-      <a href="#" class="author">{{ comment.creator.username }}</a>
+      <a href="{{ url_for('user.index', user_id=comment.creator.id) }}" class="author">
+        {{ comment.creator.username }}
+      </a>
       <div class="metadata">
         <span class="date">{{ moment(comment.create_time).fromNow() }}</span>
       </div>
@@ -76,10 +88,14 @@
           <i class="comment icon"></i>
         </span>
       </div>
+      {# 回复列表 #}
       {% if comment.ordered_replies|length > 0 %}
         <div class="comments">
           {% for reply in comment.ordered_replies %}
             <div class="comment">
+              <a href="{{ url_for('user.index', user_id=reply.creator.id) }}" class="avatar">
+                <img src="{{ reply.creator.avatar(50) }}">
+              </a>
               <div class="content">
                 <a href="#" class="author">{{ reply.creator.username }}</a>
                 <div class="metadata">
@@ -106,15 +122,13 @@
   </div>
 {% endmacro %}
 
-{% macro render_trend_card(trend) %}
-{% endmacro %}
-
 {% macro render_user_card(user) %}
 <div class="ui card user-card">
-    <div class="image">
-
-    </div>
+{#    <div class="image">#}
+{#      <img src="{{ user.avatar(300) }}">#}
+{#    </div>#}
     <div class="content">
+      <img class="right floated mini ui image" src="{{ user.avatar() }}">
       <div class="header">
         <span>{{ user.username }}</span>
       </div>
@@ -170,4 +184,20 @@
       </div>
     </div>
   </div>
+{% endmacro %}
+
+{% macro render_stat(stat) %}
+      <div class="stat">
+        <div class="avatar">
+          <img src="{{ stat.creator.avatar(50) }}">
+        </div>
+        {% if stat.creator_id == stat.discussion.creator.id %}
+      <div class="content from-creator">
+          {% else %}
+      <div class="content">
+        {% endif %}
+        <p><b>{{ stat.creator.username }}</b></p>
+        <p>{{ stat.content }}</p>
+      </div>
+      </div>
 {% endmacro %}
