--- a/like/templates/disc/room.html
+++ b/like/templates/disc/room.html
@@ -38,13 +38,12 @@
     <div class="ui middle aligned list">
       {% for user in disc.participants %}
         <div class="item">
-          <img src="{{ user.avatar(40) }}" class="ui avatar image">
+          <img src="{{ user.avatar() }}" class="ui avatar image">
           <div class="content">
             <div class="header">{{ user.username }}</div>
           </div>
         </div>
       {% endfor %}
-
     </div>
   </div>
 
