--- a/like/templates/front/index.html
+++ b/like/templates/front/index.html
@@ -44,6 +44,28 @@
       </div>
     </div>
   </div>
+  {% if possible_know %}
+    <div class="ui card">
+      <div class="content">
+        <div class="header center">可能认识的人</div>
+        <div class="description">
+          <div class="ui middle aligned list">
+            {% for num, user in possible_know %}
+              <div class="item">
+                <img src="{{ user.avatar() }}" class="ui avatar image">
+                <div class="content">
+                  <a href="{{ url_for('user.index', user_id=user.id) }}" class="header">
+                    {{ user.username }}
+                  </a>
+                  <div class="description">共有 {{ num }} 名共同关注</div>
+                </div>
+              </div>
+            {% endfor %}
+          </div>
+        </div>
+      </div>
+    </div>
+  {% endif %}
 {% endblock %}
 
 {% block scripts %}
