--- a/like/templates/front/search.html
+++ b/like/templates/front/search.html
@@ -9,7 +9,7 @@
     <div class="ui middle aligned selection list">
       {% for user in users %}
         <div class="item">
-          <img class="ui avatar image" src="{{ user.avatar(40) }}">
+          <img class="ui avatar image" src="{{ user.avatar() }}">
           <div class="content">
             <div class="header">{{ user.username }}</div>
             <div class="description">{{ user.bio }}</div>
