--- a/like/templates/_base.html
+++ b/like/templates/_base.html
@@ -1,4 +1,4 @@
-{% from 'bootstrap/utils.html' import render_static %}
+{% from '_macros.html' import render_static %}
 
 <!DOCTYPE html>
 <html lang="zh-CN">
