使用 CDN 加载 jquery

--- a/like/templates/_base.html
+++ b/like/templates/_base.html
@@ -54,6 +54,8 @@
   {% endblock %}
   {% block scripts %}
     {{ render_static('js', 'js/jquery.min.js') }}
+    <script type="text/javascript" src="https://cdn.staticfile.org/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.staticfile.org/jquery/3.3.1/jquery.min.map"></script>
     {{ render_static('js', 'js/moment-with-locales.min.js') }}
     {{ render_static('js', 'semantic-ui/semantic.min.js') }}
     {{ render_static('js', 'js/common.js') }}
