--- a/like/templates/_base.html
+++ b/like/templates/_base.html
@@ -53,7 +53,9 @@
   {% block body %}
   {% endblock %}
   {% block scripts %}
-    {{ render_static('js', 'js/jquery.min.js') }}
+{#    {{ render_static('js', 'js/jquery.min.js') }}#}
+    <script type="text/javascript" src="https://cdn.staticfile.org/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.staticfile.org/jquery/3.3.1/jquery.min.map"></script>
     {{ render_static('js', 'js/moment-with-locales.min.js') }}
     {{ render_static('js', 'semantic-ui/semantic.min.js') }}
     {{ render_static('js', 'js/common.js') }}
