--- a/like/templates/_base.html
+++ b/like/templates/_base.html
@@ -5,7 +5,7 @@
   <head>
   <meta charset="UTF-8">
   {% block title %}<title>{% block page_title %}{% endblock %} - 立刻 Like</title>{% endblock %}
-  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}">
   {{ render_static('css', 'semantic-ui/semantic.min.css') }}
   {{ render_static('css', 'css/common.css') }}
   {% block head %}
