--- a/like/templates/_base.html
+++ b/like/templates/_base.html
@@ -55,7 +55,7 @@
   {% block scripts %}
     <script type="text/javascript" src="https://cdn.staticfile.org/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.staticfile.org/jquery/3.3.1/jquery.min.map"></script>
-    <script type="text/javascript" src="https://cdn.staticfile.org/moment.js/2.23.0/locale/zh-cn.js"></script>
+    <script type="text/javascript" src="https://cdn.staticfile.org/moment.js/2.23.0/moment-with-locales.min.js"></script>
     {{ render_static('js', 'semantic-ui/semantic.min.js') }}
     {{ render_static('js', 'js/common.js') }}
   {% endblock %}
