--- a/like/templates/disc/room.html
+++ b/like/templates/disc/room.html
@@ -39,7 +39,7 @@
       {% for user in disc.participants %}
         <div class="item">
           <a href="{{ url_for('user.index', user_id=user.id) }}">
-          <img src="{{ user.avatar() }}" class="ui avatar image">
+          <img src="{{ user.avatar }}" class="ui avatar image">
           <div class="content">
             <div class="header">{{ user.username }}</div>
           </div>
